--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
 </head>
 <body>
     <h2>测试一下</h2>
+    <!--First load common chunk-->
+    <script src="./dist/vendors.bundle.js"></script>
+    <script src="./dist/app.bundle.js"></script>
 </body>
 </html>
