--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <link rel="shortcut icon" type="image/ico" href="favicon.ico" />
+    <title>Snippets</title>
 </head>
 <body>
-    <h2>测试一下</h2>
+    <!--Vue App-->
+    <div id="app"></div>
     <!--First load common chunk-->
     <script src="./dist/vendors.bundle.js"></script>
     <script src="./dist/app.bundle.js"></script>
