--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="shortcut icon" type="image/ico" href="favicon.ico" />
+    <meta name="msapplication-tap-highlight" content="no">
     <title>Snippets</title>
 </head>
 <body>
